# Rustle

./: .gitignore  Cargo.toml  Dioxus.toml
.devcontainer/: devcontainer.json
src/: Lexique381.csv  WordleSolver.rs  main.rs
src/WordleSolver/: tests.rs
