[package]
name = "rustle"
version = "0.1.0"
authors = ["Theodore Di Pietro <theodore.dipietro@o2do.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = "0.4.3"
dioxus-liveview = { version = "0.4.3", features = ["axum"] }
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.6.20", features = ["ws"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
itertools = "0.12.1"
deunicode = "1.4.3"
rayon = "1.9.0"

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
